--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>CreativeHorizonFrotend</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>CreativeHorizonFrontend</title>
+    <!-- Favicon en formato .ico -->
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
+    <!-- Favicons en formato .png con diferentes tamaños -->
+    <link rel="icon" href="assets/images/favicon-16x16.png" sizes="16x16" type="image/png" />
+    <link rel="icon" href="assets/images/favicon-32x32.png" sizes="32x32" type="image/png" />
+    <link rel="icon" href="assets/images/favicon-48x48.png" sizes="48x48" type="image/png" />
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
+
