--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,33 @@
     <!-- Favicon en formato .ico -->
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
     <!-- Favicons en formato .png con diferentes tamaños -->
-    <link rel="icon" href="assets/images/favicon-16x16.png" sizes="16x16" type="image/png" />
-    <link rel="icon" href="assets/images/favicon-32x32.png" sizes="32x32" type="image/png" />
-    <link rel="icon" href="assets/images/favicon-48x48.png" sizes="48x48" type="image/png" />
+    <link
+      rel="icon"
+      href="assets/images/favicon-16x16.png"
+      sizes="16x16"
+      type="image/png"
+    />
+    <link
+      rel="icon"
+      href="assets/images/favicon-32x32.png"
+      sizes="32x32"
+      type="image/png"
+    />
+    <link
+      rel="icon"
+      href="assets/images/favicon-48x48.png"
+      sizes="48x48"
+      type="image/png"
+    />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Agregar la referencia a Bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
   </head>
   <body>
     <app-root></app-root>
   </body>
 </html>
-
